Version 9      ???

--Fixed client bug in coin distribution after a tie.





Version 8      Live Server Fixes

--Added a tribute cap, initially at 4 coins.

--Adjusted tribute percentage to 17, and lowered cap to 1.  Thus, at most one
  coin is taken as tribute, but it is taken from all pots that are 6 or larger.






Version 8      2014-November-20

First private alpha release.