@@ -2,6 +2,9 @@ Version 9      ???
 
 --Fixed client bug in coin distribution after a tie.
 
+--Fixed confusing behavior when opponent bets less than us and then folds (our
+  larger bet is now shown moving into the pot before the payout---before, our
+  larger bet was not shown moving into the pot).
 
 
 
